--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,8 +1,12 @@
 $dark-blue: #2D4671;
+$light-blue: #4F7CAC;
 $dark-green: #246B61;
+$light-green: #69995D;
 $dark-purple: #3D3175;
-$yellow: #FECE0A;
+$light-purple: #712F79;
+$med-purple: #A7A5C6;
 $dark-yellow: #E79E13;
+$light-yellow: #FECE0A;
 $title-font: 'Amatica SC', Helvetica, sans-serif;
 $primary-font: 'Slabo 27px', Helvetica, sans-serif;
 
