--- a/templates/contact.handlebars
+++ b/templates/contact.handlebars
@@ -5,7 +5,7 @@
     <form action="https://script.google.com/macros/s/AKfycbxb2hQxFXnKvKA67YG2YngTv5zLea5mPjsIecjslySsOG_X7_xp/exec">
       <div class="form-field">
         <label for="name">{{contact.name}}</label>
-        <input type="text" name="name" autofocus>
+        <input type="text" name="name">
       </div>
       <div class="form-field">
         <label for="email">{{contact.email}}</label>
@@ -24,7 +24,7 @@
         <textarea name="message"></textarea>
       </div>
       <div class="submit">
-        <input type="submit" name={{contact.submit}} class="btn">
+        <input type="submit" name={{contact.submit}} class="button yellow">
       </div>
     </form>
   </div>
