--- a/templates/gallery.handlebars
+++ b/templates/gallery.handlebars
@@ -3,11 +3,11 @@
   <h1 class="headline">{{gallery.headline}}</h1>
 
   <div class="polaroid-images">
-    <a href="" title={{gallery.baseCamp}}><img height="180" src="pictures/tienda.jpg" alt="tent" title="tent" /></a>
-    <a href="" title={{gallery.reflections}}><img height="180" src="pictures/paisaje.jpg" alt="reflections" title="reflections" /></a>
-    <a href="" title={{gallery.morning}}><img height="180" src="pictures/morning.jpg" alt="morning" title="morning" /></a>
-    <a href="" title={{gallery.canoes}}><img height="180" src="pictures/canoa.jpg" alt="canoe" title="canoe" /></a>
-    <a href="" title={{gallery.hike}}><img height="180" src="pictures/paseo.jpg" alt="walking" title="walking" /></a>
-    <a href="" title={{gallery.sharonDani}}><img height="180" src="pictures/sharonanddani.jpg" alt="Sharon and Dani" title="Sharon and Dani" /></a>
+    <a href="" title={{gallery.baseCamp}}><img height="180" src="pictures/tienda.jpg" alt="tent" /></a>
+    <a href="" title={{gallery.reflections}}><img height="180" src="pictures/paisaje.jpg" alt="reflections"/></a>
+    <a href="" title={{gallery.morning}}><img height="180" src="pictures/morning.jpg" alt="morning"/></a>
+    <a href="" title={{gallery.canoes}}><img height="180" src="pictures/canoa.jpg" alt="canoe"/></a>
+    <a href="" title={{gallery.hike}}><img height="180" src="pictures/paseo.jpg" alt="walking"/></a>
+    <a href="" title={{gallery.sharonDani}}><img height="180" src="pictures/sharonanddani.jpg" alt="Sharon and Dani"/></a>
   </div>
 </div>
