--- a/templates/hiking.handlebars
+++ b/templates/hiking.handlebars
@@ -2,20 +2,25 @@
 <div class="content">
   <div class="text">
     <h1 class="headline">{{hiking.headline}}</h1>
-    <p class="product">{{hiking.product}}</p>
-    <p class="offer">{{hiking.offer.whatWeOffer}}</p>
-    <ul class="included">
-      {{#each hiking.offer.items}}
-      <li>{{label}}</li>
-      {{/each}}
-    </ul>
-    <p class="customize">{{hiking.customize}}</p>
-    <p class="call-to-action">{{hiking.callToAction}}</p>
-    <div class="call-to-action">
-      <div class="actions">
-      {{#each hiking.actions}}
-        <a href="{{url}}" class="button green">{{anchor}}</a>
-      {{/each}}
+    <div class="product-highlight">
+      <h3>{{hiking.product}} - {{hiking.price}}</h3>
+    </div>
+    <div class="product-description">
+      <p class="description">{{{hiking.description}}}</p>
+      <h4 class="offer">{{hiking.offer.whatWeOffer}}</h4>
+      <ul class="included">
+        {{#each hiking.offer.items}}
+        <li>{{label}}</li>
+        {{/each}}
+      </ul>
+      <p>{{hiking.customize}}</p>
+      <p>{{hiking.callToAction}}</p>
+      <div class="call-to-action">
+        <div class="actions">
+        {{#each hiking.actions}}
+          <a href="{{url}}" class="button yellow">{{anchor}}</a>
+        {{/each}}
+        </div>
       </div>
     </div>
   </div>
