--- a/templates/pricing.handlebars
+++ b/templates/pricing.handlebars
@@ -1,10 +1,10 @@
 <div class="overlay"></div>
 <div class="content">
-  <div class="text">
+  <div class="columns">
     <h1 class="headline">{{pricing.headline}}</h1>
     <div class="pricing-columns">
       {{#each pricing.products}}
-        <div class="pricing camping">
+        <div class="pricing {{name}}">
           <h2>{{price}}</h2>
           <h3>{{title}}</h3>
           <h4>{{offer.included}}</h4>
