--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ section {
     padding: 20px; }
 
 footer {
-  background: url("../pictures/barca.jpg") no-repeat center bottom fixed;
+  background: url("../images/barca.jpg") no-repeat center bottom fixed;
   color: #ffffff;
   text-align: center;
   position: relative;
@@ -83,7 +83,7 @@ a {
 
 section#landing {
   color: #fff;
-  background: url("../pictures/barca.jpg") no-repeat center center fixed;
+  background: url("../images/barca.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -104,7 +104,7 @@ section#landing {
 
 section#intro {
   min-height: 100vh;
-  background: url("../pictures/lake.jpg") no-repeat center center fixed;
+  background: url("../images/lake.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -115,7 +115,7 @@ section#intro {
     font-size: 1.2em; }
 
 section#camping {
-  background: url("../pictures/tienda.jpg") no-repeat center center fixed;
+  background: url("../images/camping.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -137,7 +137,7 @@ section#camping {
       color: #5E5292; }
 
 section#hiking {
-  background: url("../pictures/paseo.jpg") no-repeat center center fixed;
+  background: url("../images/paseo.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -159,7 +159,7 @@ section#hiking {
       color: #69995D; }
 
 section#pricing {
-  background: url("../pictures/canoa.jpg") no-repeat center center fixed;
+  background: url("../images/canoa.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -220,17 +220,17 @@ section#team {
           padding: 10px;
           opacity: 1; }
       section#team .member .team-picture#dani, section#team .member .greeting#dani {
-        background: url("../pictures/dani.jpg") no-repeat center center;
+        background: url("../images/dani.jpg") no-repeat center center;
         background-size: cover; }
         section#team .member .team-picture#dani .greeting, section#team .member .greeting#dani .greeting {
           background-color: rgba(61, 49, 117, 0.5); }
       section#team .member .team-picture#sharon, section#team .member .greeting#sharon {
-        background: url("../pictures/sharon.jpg") no-repeat center center;
+        background: url("../images/sharon.jpg") no-repeat center center;
         background-size: cover; }
         section#team .member .team-picture#sharon .greeting, section#team .member .greeting#sharon .greeting {
           background-color: rgba(36, 107, 97, 0.5); }
       section#team .member .team-picture#bowie, section#team .member .greeting#bowie {
-        background: url("../pictures/bowie.jpg") no-repeat center center;
+        background: url("../images/bowie.jpg") no-repeat center center;
         background-size: cover; }
         section#team .member .team-picture#bowie .greeting, section#team .member .greeting#bowie .greeting {
           background-color: rgba(231, 158, 19, 0.5); }
