--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -51,7 +51,7 @@ section {
 }
 
 footer {
-  background: url('../pictures/barca.jpg') no-repeat center bottom fixed;
+  background: url('../images/barca.jpg') no-repeat center bottom fixed;
   color: #ffffff;
   text-align: center;
   position: relative;
@@ -112,7 +112,7 @@ a {
 
 section#landing {
   color: #fff;
-  background: url('../pictures/barca.jpg') no-repeat center center fixed;
+  background: url('../images/barca.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -140,7 +140,7 @@ section#landing {
 
 section#intro {
   min-height: 100vh;
-  background: url('../pictures/lake.jpg') no-repeat center center fixed;
+  background: url('../images/lake.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -156,7 +156,7 @@ section#intro {
 }
 
 section#camping {
-  background: url('../pictures/tienda.jpg') no-repeat center center fixed;
+  background: url('../images/camping.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -189,7 +189,7 @@ section#camping {
 }
 
 section#hiking {
-  background: url('../pictures/paseo.jpg') no-repeat center center fixed;
+  background: url('../images/paseo.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -222,7 +222,7 @@ section#hiking {
 }
 
 section#pricing {
-  background: url('../pictures/canoa.jpg') no-repeat center center fixed;
+  background: url('../images/canoa.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -319,7 +319,7 @@ section#team {
       }
 
       &#dani {
-        background: url('../pictures/dani.jpg') no-repeat center center;
+        background: url('../images/dani.jpg') no-repeat center center;
         background-size: cover;
 
         .greeting {
@@ -328,7 +328,7 @@ section#team {
       }
 
       &#sharon {
-        background: url('../pictures/sharon.jpg') no-repeat center center;
+        background: url('../images/sharon.jpg') no-repeat center center;
         background-size: cover;
 
         .greeting {
@@ -337,7 +337,7 @@ section#team {
       }
 
       &#bowie {
-        background: url('../pictures/bowie.jpg') no-repeat center center;
+        background: url('../images/bowie.jpg') no-repeat center center;
         background-size: cover;
 
         .greeting {
