changed gallery template

--- a/templates/gallery.handlebars
+++ b/templates/gallery.handlebars
@@ -3,11 +3,11 @@
   <h1 class="headline">{{gallery.headline}}</h1>
 
   <div class="polaroid-images">
-    <a href="" title={{gallery.baseCamp}}><img height="180" src="images/tienda.jpg" alt="tent" /></a>
-    <a href="" title={{gallery.reflections}}><img height="180" src="images/paisaje.jpg" alt="reflections"/></a>
-    <a href="" title={{gallery.morning}}><img height="180" src="images/morning.jpg" alt="morning"/></a>
-    <a href="" title={{gallery.canoes}}><img height="180" src="images/canoa.jpg" alt="canoe"/></a>
-    <a href="" title={{gallery.hike}}><img height="180" src="images/paseo.jpg" alt="walking"/></a>
-    <a href="" title={{gallery.sharonDani}}><img height="180" src="images/sharonanddani.jpg" alt="Sharon and Dani"/></a>
+    <a href="" title="Base Camp"><img height="200" src="pictures/tienda.jpg" alt="Cave" title="Cave" /></a>
+    <a href="" title="Mirror"><img height="200" src="pictures/paisaje.jpg" alt="Cave" title="Cave" /></a>
+    <a href="" title="Good Morning"><img height="200" src="pictures/morning.jpg" alt="Cave" title="Cave" /></a>
+    <a href="" title="Canoes"><img height="200" src="pictures/canoa.jpg" alt="Cave" title="Cave" /></a>
+    <a href="" title="Just walk!"><img height="200" src="pictures/paseo.jpg" alt="Cave" title="Cave" /></a>
+    <a href="" title="Sharon and Dani"><img height="200" src="pictures/sharonanddani.jpg" alt="Sharon and Dani" title="" /></a>
   </div>
 </div>
