--- a/templates/gallery.handlebars
+++ b/templates/gallery.handlebars
@@ -3,11 +3,11 @@
   <h1 class="headline">{{gallery.headline}}</h1>
 
   <div class="polaroid-images">
-    <a href="" title="Base Camp"><img height="200" src="pictures/tienda.jpg" alt="Cave" title="Cave" /></a>
+    <a href="" title="Base Camp"><img height="200" src="pictures/camping.jpg" alt="Camping" title="Cave" /></a>
     <a href="" title="Mirror"><img height="200" src="pictures/paisaje.jpg" alt="Cave" title="Cave" /></a>
     <a href="" title="Good Morning"><img height="200" src="pictures/morning.jpg" alt="Cave" title="Cave" /></a>
-    <a href="" title="Canoes"><img height="200" src="pictures/canoa.jpg" alt="Cave" title="Cave" /></a>
-    <a href="" title="Just walk!"><img height="200" src="pictures/paseo.jpg" alt="Cave" title="Cave" /></a>
+    <a href="" title="Canoes"><img height="200" src="pictures/canoa.jpg" alt="Canoes" title="Cave" /></a>
+    <a href="" title="Just walk!"><img height="200" src="pictures/paseo.jpg" alt="Just Walk" title="Cave" /></a>
     <a href="" title="Sharon and Dani"><img height="200" src="pictures/sharonanddani.jpg" alt="Sharon and Dani" title="" /></a>
   </div>
 </div>
