--- a/templates/intro.handlebars
+++ b/templates/intro.handlebars
@@ -2,6 +2,7 @@
 <div class="content">
   <div class="text">
     <h1 class="greeting">{{intro.invitation}}</h1>
+    <p class="conversation">{{intro.mission}}</p>
     <p class="conversation">{{intro.explanation}}</p>
     <div class="call-to-action">
       <p class="conversation">{{intro.hikingOrCamping}}</p>
