--- a/templates/pricing.handlebars
+++ b/templates/pricing.handlebars
@@ -6,6 +6,7 @@
       {{#each pricing.products}}
         <div class="pricing {{name}}">
           <h2>{{price}}</h2>
+          <h4 class="hst">{{hst}}</h4>
           <h3>{{title}}</h3>
           <h4>{{offer.included}}</h4>
           <ul class="included">
