--- a/css/styles.css
+++ b/css/styles.css
@@ -89,12 +89,12 @@ section#landing {
   -o-background-size: cover;
   background-size: cover;
   height: 100vh;
-  justify-content: flex-end; }
+  justify-content: center; }
   section#landing .overlay {
     background: linear-gradient(35deg, #E79E13, #246B61, #3D3175); }
   section#landing .content {
     height: inherit;
-    justify-content: flex-end; }
+    justify-content: space-around; }
   section#landing .ftws {
     position: absolute;
     top: 0;
@@ -175,10 +175,12 @@ section#pricing {
   section#pricing .pricing {
     flex-grow: 1;
     flex-basis: 33%;
-    padding: 20px; }
-    section#pricing .pricing h2 {
+    padding: 20px;
+    min-width: 100px; }
+    section#pricing .pricing h2, section#pricing .pricing h4.hst {
       margin: 0;
-      color: #FECE0A; }
+      color: #FECE0A;
+      text-align: center; }
   section#pricing .action {
     display: flex;
     justify-content: center; }
@@ -248,59 +250,59 @@ section#gallery {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; }
-  section#gallery .polaroid-images a {
-    background: white;
-    display: inline;
-    float: right;
-    background-repeat: round;
-    margin: 0 15px 30px;
-    padding: 10px 10px 25px;
-    text-align: center;
-    text-decoration: none;
-    -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    -webkit-transition: all .15s linear;
-    -moz-transition: all .15s linear;
-    transition: all .15s linear;
-    z-index: 0;
-    position: relative; }
-  section#gallery .polaroid-images a:after {
-    color: #333;
-    font-size: 20px;
-    content: attr(title);
-    position: relative;
-    top: 15px; }
-  section#gallery .polaroid-images a:hover {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transform: scale(1.2);
-    -moz-transform: scale(1.2);
-    transform: scale(1.2);
-    z-index: 10;
-    -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
-    -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7); }
-  section#gallery .polaroid-images img {
-    display: block;
-    width: inherit; }
-  section#gallery .polaroid-images a:nth-child(2n) {
-    -webkit-transform: rotate(4deg);
-    -moz-transform: rotate(4deg);
-    transform: rotate(4deg); }
-  section#gallery .polaroid-images a:nth-child(3n) {
-    -webkit-transform: rotate(-24deg);
-    -moz-transform: rotate(-24deg);
-    transform: rotate(-24deg); }
-  section#gallery .polaroid-images a:nth-child(4n) {
-    -webkit-transform: rotate(14deg);
-    -moz-transform: rotate(14deg);
-    transform: rotate(14deg); }
-  section#gallery .polaroid-images a:nth-child(5n) {
-    -webkit-transform: rotate(-18deg);
-    -moz-transform: rotate(-18deg);
-    transform: rotate(-18deg); }
+    section#gallery .polaroid-images img {
+      display: block;
+      width: inherit; }
+    section#gallery .polaroid-images a {
+      background: white;
+      display: inline;
+      float: right;
+      background-repeat: round;
+      margin: 0 15px 30px;
+      padding: 10px 10px 25px;
+      text-align: center;
+      text-decoration: none;
+      -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+      -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+      -webkit-transition: all .15s linear;
+      -moz-transition: all .15s linear;
+      transition: all .15s linear;
+      z-index: 0;
+      position: relative; }
+    section#gallery .polaroid-images a:after {
+      color: #333;
+      font-size: 20px;
+      content: attr(title);
+      position: relative;
+      top: 15px; }
+    section#gallery .polaroid-images a:hover {
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      transform: rotate(0deg);
+      -webkit-transform: scale(1.2);
+      -moz-transform: scale(1.2);
+      transform: scale(1.2);
+      z-index: 10;
+      -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
+      -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7); }
+    section#gallery .polaroid-images a:nth-child(2n), section#gallery .polaroid-images a:nth-child(6n) {
+      -webkit-transform: rotate(4deg);
+      -moz-transform: rotate(4deg);
+      transform: rotate(4deg); }
+    section#gallery .polaroid-images a:nth-child(3n) {
+      -webkit-transform: rotate(-24deg);
+      -moz-transform: rotate(-24deg);
+      transform: rotate(-24deg); }
+    section#gallery .polaroid-images a:nth-child(4n) {
+      -webkit-transform: rotate(14deg);
+      -moz-transform: rotate(14deg);
+      transform: rotate(14deg); }
+    section#gallery .polaroid-images a:nth-child(5n) {
+      -webkit-transform: rotate(-18deg);
+      -moz-transform: rotate(-18deg);
+      transform: rotate(-18deg); }
 
 section#contact {
   color: #000; }
@@ -376,5 +378,24 @@ section#contact {
     background: #E79E13; }
     .button.yellow:hover {
       background: #FECE0A; }
+
+@media screen and (max-device-width: 930px) {
+  section#team .team-members {
+    display: block; }
+
+  section#pricing .pricing-columns {
+    display: block; }
+  section#pricing .pricing.camping, section#pricing .pricing.hiking {
+    border-right: none !important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.7); } }
+@media screen and (max-width: 930px) {
+  section#team .team-members {
+    display: block; }
+
+  section#pricing .pricing-columns {
+    display: block; }
+  section#pricing .pricing.camping, section#pricing .pricing.hiking {
+    border-right: none !important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.7); } }
 
 /*# sourceMappingURL=styles.css.map */
