--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -52,6 +52,7 @@ section {
 
 footer {
   background: url('../images/barca.jpg') no-repeat center bottom fixed;
+  background-size: cover;
   color: #ffffff;
   text-align: center;
   position: relative;
@@ -356,6 +357,10 @@ section#team {
       max-width: 100%;
       height: auto;
     }
+  }
+
+  .first-aid {
+    text-align: center;
   }
 }
 
