--- a/templates/footer.handlebars
+++ b/templates/footer.handlebars
@@ -4,9 +4,9 @@
   <div class="contact-info">
     <p>{{footer.phone}}</p>
     <p>
-      <a href={{footer.twitter}}><i class="fa fa-twitter" aria-hidden="true"></i></a>
-      <a href={{footer.facebook}}><i class="fa fa-facebook" aria-hidden="true"></i></a>
-      <a href={{footer.instagram}}><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      <a href={{{footer.twitter}}}><i class="fa fa-twitter" aria-hidden="true"></i></a>
+      <a href={{{footer.facebook}}}><i class="fa fa-facebook" aria-hidden="true"></i></a>
+      <a href={{{footer.instagram}}}><i class="fa fa-instagram" aria-hidden="true"></i></a>
     </p>
   </div>
 </div>
