--- a/templates/team.handlebars
+++ b/templates/team.handlebars
@@ -17,7 +17,7 @@
         </div>
       {{/each}}
     </div>
-    <div>
+    <div class='first-aid'>
       <p>{{team.firstAid}}</p>
     </div>
   </div>
