added copyright and email to footer

--- a/templates/footer.handlebars
+++ b/templates/footer.handlebars
@@ -1,12 +1,13 @@
 <div class="overlay"></div>
 <div class="content">
-  <h4>{{footer.headline}}</h4>
   <div class="contact-info">
-    <p>{{footer.phone}}</p>
     <p>
       <a href={{{footer.twitter}}}><i class="fa fa-twitter" aria-hidden="true"></i></a>
       <a href={{{footer.facebook}}}><i class="fa fa-facebook" aria-hidden="true"></i></a>
       <a href={{{footer.instagram}}}><i class="fa fa-instagram" aria-hidden="true"></i></a>
     </p>
+    <p><a href="mailto:{{footer.email}}">{{footer.email}}</a></p>
+    <p>{{footer.phone_en}}</p>
+    <small>Copyright 2017</small>
   </div>
 </div>
