--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -7,5 +7,5 @@ $light-purple: #5E5292;
 $dark-yellow: #E79E13;
 $light-yellow: #FECE0A;
 $title-font: 'Amatica SC', Helvetica, sans-serif;
-$primary-font: 'Slabo 27px', Helvetica, sans-serif;
+$primary-font: 'Roboto', Helvetica, sans-serif;
 
