--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Slabo 27px", Helvetica, sans-serif;
+  font-family: "Roboto", Helvetica, sans-serif;
   line-height: 1.5;
   font-size: 22px;
   display: flex;
@@ -81,6 +81,55 @@ a {
 .title-dark {
   color: #3D3175;
   margin: 0.6em; }
+
+.logo {
+  position: absolute;
+  z-index: 10;
+  padding-top: 30px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.8em;
+  width: 100%; }
+  .logo img {
+    width: 50px;
+    margin: 0 10px; }
+  .logo span {
+    text-transform: uppercase; }
+
+#main-nav {
+  position: fixed;
+  z-index: 100;
+  right: 0;
+  padding-right: 30px;
+  display: flex;
+  height: 100%;
+  align-items: center; }
+  #main-nav .nav-line {
+    border: 1px solid white; }
+  #main-nav .nav-items {
+    font-size: 0.7em;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end; }
+    #main-nav .nav-items .nav-item {
+      transition: all 0.5s ease-in-out;
+      margin: 10px; }
+      #main-nav .nav-items .nav-item a {
+        text-decoration: none; }
+      #main-nav .nav-items .nav-item .label {
+        opacity: 0;
+        transition: all 0.5s ease-in-out; }
+      #main-nav .nav-items .nav-item.active {
+        margin-top: 30px;
+        margin-bottom: 30px;
+        font-size: 1.4em; }
+        #main-nav .nav-items .nav-item.active .label {
+          opacity: 1;
+          font-size: 0.7em; }
+      #main-nav .nav-items .nav-item:hover .label {
+        opacity: 1; }
 
 section#landing {
   color: #fff;
@@ -352,7 +401,7 @@ section#contact {
         border: none;
         cursor: pointer;
         font-size: 1.2em;
-        font-family: "Slabo 27px", Helvetica, sans-serif;
+        font-family: "Roboto", Helvetica, sans-serif;
         color: #fff; }
 
 .button {
@@ -360,7 +409,8 @@ section#contact {
   border-radius: 2px;
   text-decoration: none;
   margin: 10px;
-  transition: all 0.5s ease-in-out; }
+  transition: all 0.5s ease-in-out;
+  font-size: 1.2em; }
   .button a {
     color: #fff !important; }
     .button a:visited {
@@ -383,6 +433,9 @@ section#contact {
       background: #FECE0A; }
 
 @media screen and (max-device-width: 930px) {
+  body {
+    font-size: 32px; }
+
   section#team .team-members {
     display: block; }
 
