english and spanish text

--- a/templates/contact.handlebars
+++ b/templates/contact.handlebars
@@ -43,7 +43,7 @@
         <textarea name="message"></textarea>
       </div>
       <div class="submit">
-        <input type="submit" name={{contact.submit}} class="button purple">
+        <input type="submit" value={{contact.submit}} class="button purple">
       </div>
     </form>
   </div>
