--- a/templates/footer.handlebars
+++ b/templates/footer.handlebars
@@ -1,13 +1,13 @@
 <div class="overlay"></div>
 <div class="content">
   <div class="contact-info">
-    <p>
+    <p class="social-media">
       <a href={{{footer.twitter}}}><i class="fa fa-twitter" aria-hidden="true"></i></a>
       <a href={{{footer.facebook}}}><i class="fa fa-facebook" aria-hidden="true"></i></a>
       <a href={{{footer.instagram}}}><i class="fa fa-instagram" aria-hidden="true"></i></a>
     </p>
     <p><a href="mailto:{{footer.email}}">{{footer.email}}</a></p>
-    <p>{{footer.phone_en}}</p>
+    <p>{{footer.phone_en}} for English or {{footer.phone_es}} for Spanish</p>
     <small>Copyright 2017</small>
   </div>
 </div>
