--- a/templates/pricing.handlebars
+++ b/templates/pricing.handlebars
@@ -15,7 +15,7 @@
             {{/each}}
           </ul>
           <div class="action">
-            <a data-scroll href="#contact" class="button yellow">Book it</a>
+            <a data-scroll href="#contact" class="button yellow">{{../pricing.callToAction}}</a>
           </div>
         </div>
       {{/each}}
