--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
+@font-face {
+  font-family: 'Shorelines Script Bold';
+  src: url("../fonts/shorelines_script_bold.otf"), format("opentype"); }
 body {
-  font-family: "Roboto", Helvetica, sans-serif;
+  font-family: "Slabo 27px", Helvetica, sans-serif;
   line-height: 1.5;
   font-size: 22px;
   display: flex;
@@ -53,7 +56,11 @@ footer {
     position: absolute;
     background: linear-gradient(35deg, #E79E13, #246B61, #3D3175); }
   footer .content {
-    position: relative; }
+    position: relative;
+    font-size: 0.7em;
+    padding: 16px; }
+    footer .content .social-media {
+      font-size: 1.3em; }
 
 h1, h2, h3, h2, h5 {
   color: #fff;
@@ -82,54 +89,32 @@ a {
   color: #3D3175;
   margin: 0.6em; }
 
-.logo {
+.header {
   position: absolute;
   z-index: 10;
   padding-top: 30px;
   color: white;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.8em;
-  width: 100%; }
-  .logo img {
-    width: 50px;
-    margin: 0 10px; }
-  .logo span {
-    text-transform: uppercase; }
-
-#main-nav {
-  position: fixed;
-  z-index: 100;
-  right: 0;
-  padding-right: 30px;
-  display: flex;
-  height: 100%;
-  align-items: center; }
-  #main-nav .nav-line {
-    border: 1px solid white; }
-  #main-nav .nav-items {
-    font-size: 0.7em;
+  font-size: 0.7em;
+  width: 100%;
+  justify-content: space-between; }
+  .header .logo {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end; }
-    #main-nav .nav-items .nav-item {
-      transition: all 0.5s ease-in-out;
-      margin: 10px; }
-      #main-nav .nav-items .nav-item a {
-        text-decoration: none; }
-      #main-nav .nav-items .nav-item .label {
-        opacity: 0;
-        transition: all 0.5s ease-in-out; }
-      #main-nav .nav-items .nav-item.active {
-        margin-top: 30px;
-        margin-bottom: 30px;
-        font-size: 1.4em; }
-        #main-nav .nav-items .nav-item.active .label {
-          opacity: 1;
-          font-size: 0.7em; }
-      #main-nav .nav-items .nav-item:hover .label {
-        opacity: 1; }
+    flex-direction: row;
+    padding-left: 20px; }
+    .header .logo img {
+      height: 50px;
+      margin-right: 16px; }
+    .header .logo .emphasize {
+      text-transform: uppercase;
+      font-weight: bold; }
+  .header .languages {
+    padding-right: 20px; }
+    .header .languages a {
+      margin: 0 4px;
+      text-decoration: none; }
+    .header .languages img {
+      height: 20px; }
 
 section#landing {
   color: #fff;
@@ -401,7 +386,7 @@ section#contact {
         border: none;
         cursor: pointer;
         font-size: 1.2em;
-        font-family: "Roboto", Helvetica, sans-serif;
+        font-family: "Slabo 27px", Helvetica, sans-serif;
         color: #fff; }
 
 .button {
