--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,10 @@
 @import 'variables';
 
+@font-face {
+  font-family: 'Shorelines Script Bold';
+  src: url('../fonts/shorelines_script_bold.otf'), format('opentype');
+}
+
 body {
   font-family: $primary-font;
   line-height: 1.5;
@@ -73,6 +78,12 @@ footer {
 
   .content {
     position: relative;
+    font-size: 0.7em;
+    padding: 16px;
+
+    .social-media {
+      font-size: 1.3em;
+    }
   }
 }
 
@@ -111,25 +122,45 @@ a {
   margin: 0.6em;
 }
 
-.logo {
+.header {
   position: absolute;
   z-index: 10;
   padding-top: 30px;
   color: white;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.8em;
+  font-size: 0.7em;
   width: 100%;
+  justify-content: space-between;
 
-  img {
-    width: 50px;
-    margin: 0 10px;
+  .logo {
+    display: flex;
+    flex-direction: row;
+    padding-left: 20px;
+
+    img {
+      height: 50px;
+      margin-right: 16px;
+    }
+
+    .emphasize {
+      text-transform: uppercase;
+      font-weight: bold;
+    }
   }
 
-  span {
-    text-transform: uppercase;
+  .languages {
+    padding-right: 20px;
+
+    a {
+      margin: 0 4px;
+      text-decoration: none;
+    }
+
+    img {
+      height: 20px;
+    }
   }
+
 }
 
 section#landing {
